app/static/css/archive_page.css
body{
  background-color: #f5f5f5;
}
.archive_header{
  margin-top: 70px;
  text-align: center;
}
.archive_title{
  font-size: 57px;
  border-bottom: 5px solid rgba(255, 194, 28, 0.8);
  padding-bottom: 25px;
  width: 90%;
  margin: auto;
}

.archive_filter{
  margin-top: 65px;
  padding: 0px 0px;
}
.archive_filter ul{
  list-style-type: none;
  display: table;
  padding: 0px 0px;
  border-radius: 10px;
  border: 1px solid #bdbdbd;
  margin: auto;
  background-color: white;
}
.archive_filter li{
  float: left;
  border-radius: 7px;
  margin: 3px;
  display: table-cell;
}
.archive_filter li:hover{
  background-color: rgba(255, 194, 28, 0.8);
}
.archive_filter p{
  padding:25px 40px;
  color: #33353d;
  margin: 0px;
  font-size: 17px;
}

.archive_row{
  position: relative;
}

/* List of episode titles */
.archive_episode_list{
  text-align: center;
  margin-left: -10px;
  margin-right: 10px;
  border-radius: 5px;
  background-color: white;
}
#archive_category{
  text-transform: none;
  padding: 40px 0px;
  font-size: 45px;
}
.archive_topic_name{
  font-style: italic;
  margin-bottom: 0px;
}

.archive_title_info{
  color: #b1b1b1;
  font-size: 16px;
  margin-bottom: 25px;
}
.archive_title_info i {
  font-weight: 100;
}
.archive_title_click{
  color: inherit;
}
/* List of episode images */
.archive_image_list{
  margin-right: -10px;
  margin-left: 10px;
  overflow: scroll;
  height: 100%;
  position: absolute;
  right:0;
  top:0;
}
.archive_episode_image{
  width: 100%;
}

/* Make the footer yellow cuz we like yellow */
footer .footer-above{
  background-color: #FFC21C;
}
footer .footer-below{
  background-color: #FFC21C;
}
footer h3{
  color:#27282D;
}
footer .btn-social{
  color: #27282D;
  border: 2px solid #27282D;
}
footer .footer-info{
  color: #F5F5F5;
}

